Examen completo 22junio

--- a/app/src/main/res/layout/fragment_list_control_financiero.xml
+++ b/app/src/main/res/layout/fragment_list_control_financiero.xml
@@ -21,25 +21,15 @@
 
     <Button
         android:id="@+id/buscar"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Buscar Texto"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/volverMain"
-        app:layout_constraintTop_toBottomOf="@id/buscador"
-        app:layout_constraintHorizontal_chainStyle="spread" />
-
-    <Button
-        android:id="@+id/volverMain"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Volver"
+        android:text="@string/boton_buscar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_chainStyle="spread"
-        app:layout_constraintStart_toEndOf="@+id/buscar"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/buscador" />
+
 
     <ListView
         android:id="@+id/listaWiki"
