--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,7 +13,7 @@
             android:id="@+id/welcome_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Bienvenido a WikiLocation"
+            android:text="@string/welcome_message"
             android:textSize="18sp"
             android:layout_gravity="center_horizontal"
             android:paddingTop="16dp" />
@@ -30,7 +30,7 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Obtener ubicacion:"
+            android:text="@string/obtener_ubicacion"
             android:gravity="center"/>
 
         <LinearLayout
@@ -44,14 +44,14 @@
                 android:id="@+id/start_button"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:text="Iniciar"
+                android:text="@string/boton_iniciar"
                 android:layout_marginStart="8dp" />
 
             <Button
                 android:id="@+id/stop_button"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:text="Detener"
+                android:text="@string/boton_detener"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 />
