--- a/app/src/main/res/menu/main_activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/main_activity_navigation_drawer.xml
@@ -5,9 +5,21 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@android:drawable/ic_menu_agenda"
-            android:title="@string/menu_camera" />
+            android:id="@+id/home_fragment"
+            android:icon="@android:drawable/ic_menu_preferences"
+            android:title="@string/home_fragment" />
+        <item
+            android:id="@+id/buscador_fragment"
+            android:icon="@android:drawable/ic_search_category_default"
+            android:title="@string/buscador_fragment" />
+        <item
+            android:id="@+id/lugares_b_d"
+            android:icon="@android:drawable/ic_menu_directions"
+            android:title="@string/menu_directions" />
+        <item
+            android:id="@+id/frecuente_fragment"
+            android:icon="@android:drawable/ic_menu_myplaces"
+            android:title="@string/frecuente_fragment" />
     </group>
 
 
