--- a/app/src/main/res/menu/main_activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/main_activity_navigation_drawer.xml
@@ -6,7 +6,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/home_fragment"
-            android:icon="@android:drawable/ic_menu_preferences"
+            android:icon="@android:drawable/ic_menu_add"
             android:title="@string/home_fragment" />
         <item
             android:id="@+id/buscador_fragment"
@@ -20,6 +20,10 @@
             android:id="@+id/frecuente_fragment"
             android:icon="@android:drawable/ic_menu_myplaces"
             android:title="@string/frecuente_fragment" />
+        <item
+            android:id="@+id/config_fragment"
+            android:icon="@android:drawable/ic_menu_preferences"
+            android:title="@string/config_fragment" />
     </group>
 
 
